feat: v0.4.0 The Functional Blueprint & Monad-Weaver paradigm
This release establishes the functional and branchless foundation for the qtr-qth hub.

Key Achievements:
- Eliminated all imperative branching (switch/if/else) from core logic.
- Enforced strict immutability with record classes and finality mandates.
- Integrated 'Bulletproof' Checkstyle automation and AssertJ/BDDMockito.
- Hardened cross-platform integrity and supply chain verification.